img added, letter finished

--- a/src/pages/marketing.html
+++ b/src/pages/marketing.html
@@ -6,7 +6,7 @@ subject: My Marketing Email Template Subject
   <row>
     <columns large="4">
       <center>
-        <img src=".\assets\img\GDG_DevFest_2017_colour_logo.svg">
+        <img src="./assets/img/GDG_DevFest_2017_colour_logo.svg">
       </center>
     </columns>
     <columns large="8">
@@ -30,25 +30,25 @@ subject: My Marketing Email Template Subject
   </row>
   <row>
     <columns large="4">
-      <img src=".\assets\img\cejas_sm.jpg">
+      <img src="../assets/img/cejas_sm.jpg">
       <h5>Fernando Cejas</h5>
-      <p>engineer at SoundCloud Passionate about software engineering Android Speaker Geek Curious Learner</p>
+      <p>an engineer at SoundCloud Passionate about software engineering Android Speaker Geek Curious Learner</p>
     </columns>
     <columns large="4">
-      <img src=".\assets\img\valiente_sm.jpg">
+      <img src="../assets/img/valiente_sm.jpg">
       <h5>Cesar Valentine</h5>
-      <p>is a passionate software engineer working at Microsoft in the One Note team (previously Wunderlist).</p>
+      <p>a passionate software engineer working at Microsoft in the One Note team (previously Wunderlist).</p>
     </columns>
     <columns large="4">
-      <img src="http://placehold.it/150x150">
+      <img src="../assets/img/manu_sm.jpg">
       <h5>Manu Wallner</h5>
-      <p>core contributors to the popular project fastlane.</p>
+      <p>a core contributor to the popular project "fastlane".</p>
     </columns>
   </row>
-  <row>
+  <row class="top-margin">
     <columns>
-      <h5>
-        To not miss any important news, please subscribe to our <a href="http://eepurl.com/cWQGM5">newsletter</a>
+      <h5 class="text-center">
+        To not miss any important news, please subscribe to our <a href="http://eepurl.com/cWQGM5">newsletter</a>!
       </h5>
     </columns>
   </row>
@@ -56,28 +56,58 @@ subject: My Marketing Email Template Subject
   <row>
     <columns>
       <p>
-        As you are a part of pride we are offering you a special ticket price. With following promo code you will get <b>25%</b> discount!
+        As you are a part of pride we are offering you a special ticket price. With following promo code you will get <b class="second-color">25%</b> discount!
       </p>
     </columns>
   </row>
   <row>
     <columns>
-      <button class="large expand" href="#">Register for the conference today!</button>
+      <h3 class="text-center second-color">
+        PROMO CODE
+      </h3>
+    </columns>
+  </row>
+  <row>
+    <columns>
+      <button class="large expand register" href="#">Register for the conference today!</button>
     </columns>
   </row>
 
   <row class="collapsed footer">
     <columns>
       <spacer size="16"></spacer>
-      <p class="text-center">&copy; copyright nobody<br/>
-      <a href="#">hello@nocopyright.com</a> | <a href="#">Manage Email Notifications</a> | <a href="#">Unsubscribe</a></p>
+      <p>
+        We will be very happy to see you there.
+        <br/><br/>
+        In code we trust,
+        <br/>
+        GDG DevFest Baltics team
+        <br/><br/>
+        <span class="second-color">
+          P.S. 
+        </span>
+        Do you or your friends/colleagues can share knowledge and experience with others?
+        It is a chance to rock the stage! <br/>
+        Fill <a href="https://www.papercall.io/devfest-baltics">Call for Papers and be ready to rock</a>.
+        
+       
+        <br/><br/>
+    </p>
       <center>
         <menu>
-          <item><img src="http://placehold.it/25" alt=""></item>
-          <item><img src="http://placehold.it/25" alt=""></item>
-          <item><img src="http://placehold.it/25" alt=""></item>
-          <item><img src="http://placehold.it/25" alt=""></item>
-          <item><img src="http://placehold.it/25" alt=""></item>
+          <item>
+            <a class="text-center" href="#">info@devfest.gdg.lv</a> 
+          </item>
+          <item>
+            <a href="https://www.facebook.com/devfestbaltics/">
+              <img class="social" src="../assets/img/002-facebook-app-logo.svg" alt="">
+            </a>
+          </item>
+          <item>
+            <a href="https://twitter.com/devfestbaltics">
+              <img class="social" src="../assets/img/001-twitter-black-shape.svg" alt="">
+            </a>
+          </item>
         </menu>
       </center>
     </columns>
