--- a/src/pages/marketing.html
+++ b/src/pages/marketing.html
@@ -30,17 +30,17 @@ subject: My Marketing Email Template Subject
   </row>
   <row>
     <columns large="4">
-      <img src="../assets/img/cejas_sm.jpg">
+      <img src="./assets/img/cejas_sm.jpg">
       <h5>Fernando Cejas</h5>
       <p>an engineer at SoundCloud Passionate about software engineering Android Speaker Geek Curious Learner</p>
     </columns>
     <columns large="4">
-      <img src="../assets/img/valiente_sm.jpg">
+      <img src="./assets/img/valiente_sm.jpg">
       <h5>Cesar Valentine</h5>
       <p>a passionate software engineer working at Microsoft in the One Note team (previously Wunderlist).</p>
     </columns>
     <columns large="4">
-      <img src="../assets/img/manu_sm.jpg">
+      <img src="./assets/img/manu_sm.jpg">
       <h5>Manu Wallner</h5>
       <p>a core contributor to the popular project "fastlane".</p>
     </columns>
