fixed social links and speaker text aligned center

--- a/src/pages/marketing.html
+++ b/src/pages/marketing.html
@@ -18,38 +18,45 @@ subject: My Marketing Email Template Subject
   <row>
     <columns>
       <h3>Dear member of GDG Riga,</h3>
-      <p>We are proud to announce our amazing conference that will be held on November 17 - <a href="https://devfest.gdg.lv/">DevFest Baltics 2017</a>. DevFest Baltics is the first conference in the Baltics packed with topics about mobile development and carefully crafted for you by GDG Baltics community! All about mobile development, Android and iOS, Mobile cross-platform tools, UI/UX and prototyping, Internet of Things, VR and AR, bots, AI and more.</p>
+      <p>We are proud to announce our amazing conference that will be held on November 17 - <a target="_blank" href="https://devfest.gdg.lv/">DevFest Baltics 2017</a>. DevFest Baltics is the first conference in the Baltics packed with topics about mobile development and carefully crafted for you by GDG Baltics community! All about mobile development, Android and iOS, Mobile cross-platform tools, UI/UX and prototyping, Internet of Things, VR and AR, bots, AI and more.</p>
     </columns>
   </row>
-  <row>
+  <row class="speakers">
     <columns>
       <h3 class="no-margin">
-        We already have set of awesome speakers
+        We already have a set of<br/>
+        <span class="second-color"> awesome speakers</span>
       </h3>
     </columns>
   </row>
-  <row>
+  <row class="speakers">
     <columns large="4">
-      <img src="./assets/img/cejas_sm.jpg">
-      <h5>Fernando Cejas</h5>
-      <p>an engineer at SoundCloud Passionate about software engineering Android Speaker Geek Curious Learner</p>
+      <center>
+        <img src="./assets/img/cejas_sm.jpg">
+        <h6 class="text-center">Fernando Cejas</h6>
+        <p class="text-center">an engineer at <b class="second-color">SoundCloud</b> passionate about software engineering Android Speaker Geek Curious Learner.</p>
+      </center>
     </columns>
     <columns large="4">
-      <img src="./assets/img/valiente_sm.jpg">
-      <h5>Cesar Valentine</h5>
-      <p>a passionate software engineer working at Microsoft in the One Note team (previously Wunderlist).</p>
+      <center>
+        <img src="./assets/img/valiente_sm.jpg">
+        <h6 class="text-center">Cesar Valentine</h6>
+        <p class="text-center">a passionate software engineer working at <b class="second-color">Microsoft</b> in the One Note team (previously Wunderlist).</p>
+      </center>
     </columns>
     <columns large="4">
-      <img src="./assets/img/manu_sm.jpg">
-      <h5>Manu Wallner</h5>
-      <p>a core contributor to the popular project "fastlane".</p>
+      <center>
+        <img src="./assets/img/manu_sm.jpg">
+        <h6 class="text-center">Manu Wallner</h6>
+        <p class="text-center">a core contributor to the popular project <b class="second-color">"fastlane"</b>.</p>
+      </center>
     </columns>
   </row>
   <row class="top-margin">
     <columns>
-      <h5 class="text-center">
-        To not miss any important news, please subscribe to our <a href="http://eepurl.com/cWQGM5">newsletter</a>!
-      </h5>
+      <h3 class="text-center">
+        To not miss any important news, please subscribe to our <a class="font-mono" target="_blank" href="http://eepurl.com/cWQGM5">newsletter</a>!
+      </h3>
     </columns>
   </row>
   <spacer size="16"></spacer>
@@ -84,28 +91,28 @@ subject: My Marketing Email Template Subject
         GDG DevFest Baltics team
         <br/><br/>
         <span class="second-color">
-          P.S. 
+          P.S.
         </span>
         Do you or your friends/colleagues can share knowledge and experience with others?
         It is a chance to rock the stage! <br/>
         Fill <a href="https://www.papercall.io/devfest-baltics">Call for Papers and be ready to rock</a>.
-        
-       
+
+
         <br/><br/>
     </p>
       <center>
         <menu>
           <item>
-            <a class="text-center" href="#">info@devfest.gdg.lv</a> 
+            <a class="text-center" href="#">info@devfest.gdg.lv</a>
           </item>
           <item>
             <a href="https://www.facebook.com/devfestbaltics/">
-              <img class="social" src="../assets/img/002-facebook-app-logo.svg" alt="">
+              <img class="social" src="./assets/img/002-facebook-app-logo.svg" alt="Facebook">
             </a>
           </item>
           <item>
             <a href="https://twitter.com/devfestbaltics">
-              <img class="social" src="../assets/img/001-twitter-black-shape.svg" alt="">
+              <img class="social" src="./assets/img/001-twitter-black-shape.svg" alt="Twitter">
             </a>
           </item>
         </menu>
