target blank added to links

--- a/src/pages/marketing.html
+++ b/src/pages/marketing.html
@@ -95,7 +95,7 @@ subject: My Marketing Email Template Subject
         </span>
         Do you or your friends/colleagues can share knowledge and experience with others?
         It is a chance to rock the stage! <br/>
-        Fill <a href="https://www.papercall.io/devfest-baltics">Call for Papers and be ready to rock</a>.
+        Fill <a target="_blank" href="https://www.papercall.io/devfest-baltics">Call for Papers and be ready to rock</a>.
 
 
         <br/><br/>
@@ -103,15 +103,15 @@ subject: My Marketing Email Template Subject
       <center>
         <menu>
           <item>
-            <a class="text-center" href="#">info@devfest.gdg.lv</a>
+            <a class="text-center" href="mailto:info@devfest.gdg.lv">info@devfest.gdg.lv</a>
           </item>
           <item>
-            <a href="https://www.facebook.com/devfestbaltics/">
+            <a target="_blank" href="https://www.facebook.com/devfestbaltics/">
               <img class="social" src="./assets/img/002-facebook-app-logo.svg" alt="Facebook">
             </a>
           </item>
           <item>
-            <a href="https://twitter.com/devfestbaltics">
+            <a target="_blank" href="https://twitter.com/devfestbaltics">
               <img class="social" src="./assets/img/001-twitter-black-shape.svg" alt="Twitter">
             </a>
           </item>
